backend/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: nodejs
  name: nodejs
spec:
  selector:
    matchLabels:
      io.kompose.service: nodejs
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: nodejs
    spec:
      containers:
        - env:
            - name: MONGO_DB
              valueFrom:
                configMapKeyRef:
                  key: MONGO_DB
                  name: nodejs-env
            - name: MONGO_HOSTNAME
              value: db
            - name: MONGO_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: MONGO_PASSWORD
                  name: mongo-secret
            - name: MONGO_PORT
              valueFrom:
                configMapKeyRef:
                  key: MONGO_PORT
                  name: nodejs-env
            - name: MONGO_USERNAME
              valueFrom:
                secretKeyRef:
                  key: MONGO_USERNAME
                  name: mongo-secret
          image: abhilashdk2018/node-mongo-kubernetes
          name: nodejs
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
